# asset-price-database

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  bulk_load_yahoo_data.py  bulk_load_yahoo_data_optimized.py  docker-compose.yml  exchange_backup_20250607_154734.csv  identify_missing_symbols.py  load_all_data.py  missing_symbols.txt  pyproject.toml  requirements.txt  retry_failed_files.py  update_exchanges.py
.cursor/rules/: api-usage.mdc  database-schema.mdc  development-guide.mdc  development-setup.mdc  etl-pipeline.mdc  project-overview.mdc
app/: __init__.py  db_client.py  fastapi_server.py  utils.py
data/samples/: ABNB.csv  ADBE.csv  BTC.csv  CRM.csv  ETH.csv  JNJ.csv  README.md
data/symbol_exchanges/: AMEX.txt  NASDAQ.txt  NYSE.txt  TSX.txt
db/conf/: pg_hba.conf
db/ddl/: 001_core.sql  002_corp_actions.sql  003_intraday.sql  999_views.sql
db/seeds/: data_source_seed.sql
docs/: PLANNING.md  database_connection_guide.md
etl/: __init__.py  cli.py  config.py  gold_refresh.py  loaders.py  qc.py  staging.py
tests/: conftest.py  test_loaders.py  test_qc.py
