[tool.poetry]
name = "asset-price-database"
version = "0.1.0"
description = "Asset Price Database - Centralized daily OHLCV data for equities, ETFs, and crypto"
authors = ["NashC"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NashC/asset_price_database"
repository = "https://github.com/NashC/asset_price_database"
keywords = ["stock", "data", "warehouse", "sql", "etl", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
packages = [
    { include = "etl" },
    { include = "app" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.11"
# Database & ORM
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.13.0"

# Data Processing
pandas = "^2.1.0"
numpy = "^1.24.0"

# Configuration & Validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

# Web Framework (Phase M4)
fastapi = "^0.104.0"
uvicorn = { extras = ["standard"], version = "^0.24.0" }

# CLI
click = "^8.1.0"

# Logging
loguru = "^0.7.0"

# Date/Time handling
python-dateutil = "^2.8.0"

# HTTP client for future API integrations
httpx = "^0.25.0"

# Optional: Performance monitoring
psutil = { version = "^5.9.0", optional = true }

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
testcontainers = "^3.7.0"

# Code Quality
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"

# Development tools
ipython = "^8.16.0"
jupyter = "^1.0.0"

# Documentation
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.group.monitoring]
optional = true

[tool.poetry.group.monitoring.dependencies]
psutil = "^5.9.0"
prometheus-client = "^0.19.0"

[tool.poetry.extras]
monitoring = ["psutil", "prometheus-client"]

[tool.poetry.scripts]
asset-price-db = "etl.cli:main"
apdb = "etl.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["etl", "app"]
skip_glob = ["migrations/*"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "psutil.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=etl",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["etl", "app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
] 